commit fro debian 12

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,15 +40,14 @@ import Config from '../consts';
 				<li><a href="https://github.com/CM-IV/astro-fast-dash">Astro Fast Dash</a> -- A homelab dashboard made with Astro SSR</li>
 				<li><a href="https://github.com/CM-IV/rs-calc">RS-Calc</a> -- A terminal calculator written in Rust capable of linear algebra operations</li>
 				<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps frontends for web applications</li>
-				<li><a href="https://github.com/CM-IV/Zat">Zat</a> -- A simple <i>cat</i> replacement written in Rust utilizing the Vector Data Structure</li>
-				<li><a href="https://github.com/CM-IV/web-image-optimizer">Web Image Optimizer</a> -- An Electronjs desktop app for optimizing photos on the web</li>
+				<li><a href="https://github.com/CM-IV/Zmap">Zmap</a> -- A multi-threaded port scanner written in Rust, scans the given IP address for open ports</li>
+				<li><a href="https://github.com/CM-IV/rs-img-optimizer">RS-Img</a> -- A multi-threaded image processor in the terminal, written in Rust</li>
 			</ul>
 			<hr />
 			<strong><p>Contact Me</p></strong>
 			<ul>
 				<li id="hireme">Business Email: <strong>{Config.socialMedia.email}</strong></li>
 				<li>Matrix.org Handle: <strong>{Config.socialMedia.matrix}</strong></li>
-				<li>Discord Handle: <strong>{Config.socialMedia.discord}</strong></li>
 				<li><a href={`https://github.com/${Config.socialMedia.github}`}>GitHub Page</a></li>
 			</ul>
 		</main>
