--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -20,6 +20,7 @@ const { title, description, image = "/flowers.png" } = Astro.props;
 <link rel="icon" type="image/x-icon" href="https://ik.imagekit.io/xbkhabiqcy9/img/favicon_DuXwGy1V-.png?ik-sdk-version=javascript-1.4.3&updatedAt=1638746946810" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css"
             integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css" integrity="sha256-XoaMnoYC5TH6/+ihMEnospgm0J1PM/nioxbOUdnM8HY=" crossorigin="anonymous">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Canonical URL -->
