--- a/src/pages/photos/index.astro
+++ b/src/pages/photos/index.astro
@@ -20,15 +20,19 @@ const orderedPhotos: CollectionEntry<'photos'>[] = photos.sort((a, b) => new Dat
 	<body>
 		<Header />
 		<main>
-			<p>These images are taken in RAW format, edited, and exported to PNG - so they're pretty large (~70MB).
-				I use my own custom software to optimize the photo size down to ~5MB and convert to webp format.
-			</p>
 			<section>
 				{
 					orderedPhotos.map((photo) => (
 						<article>
 							<a href={`/photos/${photo.slug}/`}>
-								<img src={photo.data.img} width={860} height={392} alt="photography img">    
+								<img src={photo.data.img} width={860} height={392} alt="photography img">  
+							</a>
+							<h3>{photo.data.title}</h3>
+							<i class="fa fa-camera" aria-hidden="true"></i>
+							Nikon D7000
+							<br>
+							<a href={`/photos/${photo.slug}/`}>
+								<button type="button">View Gallery</button>
 							</a>
 						</article>
 					))
