Added project to showcase

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ import Config from '../consts';
 				<li><a href="https://github.com/CM-IV/astro-fast-dash">Astro Fast Dash</a> -- A homelab dashboard made with Astro SSR</li>
 				<li><a href="https://github.com/CM-IV/rs-calc">RS-Calc</a> -- A terminal calculator written in Rust capable of linear algebra operations</li>
 				<li><a href="https://github.com/CM-IV/cmiv-CLI">cmiv-CLI</a> -- NodeJS CLI that bootstraps frontends for web applications</li>
-				<li><a href="https://github.com/CM-IV/Zmap">Zmap</a> -- A multi-threaded port scanner written in Rust, scans the given IP address for open ports</li>
+				<li><a href="https://github.com/CM-IV/crypto_rs">crypto_rs</a> -- GUI and terminal File encryption software written in Rust utilizing age encryption standards</li>
 				<li><a href="https://github.com/CM-IV/rs-img-optimizer">RS-Img</a> -- A multi-threaded image processor in the terminal, written in Rust</li>
 			</ul>
 			<hr />
