--- a/src/components/contactform.astro
+++ b/src/components/contactform.astro
@@ -1,17 +1,17 @@
 ---
 import Button from "./ui/button.astro";
+
+// 250 Submissions per month free
+const access_key = import.meta.env.ACCESS_KEY as string;
 ---
 
-<!-- To make this contact form work, create your free access key from https://web3forms.com/
-     Then you will get all form submissions in your email inbox. -->
 <form
   action="https://api.web3forms.com/submit"
   method="POST"
   id="form"
   class="needs-validation"
   novalidate>
-  <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
-  <!-- Create your free access key from https://web3forms.com/ -->
+  <input type="hidden" name="access_key" value={access_key} />
   <input type="checkbox" class="hidden" style="display:none" name="botcheck" />
   <div class="mb-5">
     <input
