--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -4,51 +4,32 @@ import { Icon } from "astro-icon";
 
 const features = [
   {
-    title: "Bring Your Own Framework",
+    title: "Tailored Solutions for Your Unique Needs",
     description:
-      "Build your site using React, Svelte, Vue, Preact, web components, or just plain ol' HTML + JavaScript.",
+      "Whether you need a robust e-commerce platform, a stunning website design, or a powerful business application, we have the skills and expertise to deliver outstanding results that exceed your expectations.",
     icon: "bx:bxs-briefcase",
   },
   {
-    title: "100% Static HTML, No JS",
+    title: "Cutting-Edge Technologies, Future-Proof Solutions",
     description:
-      "Astro renders your entire page to static HTML, removing all JavaScript from your final build by default.",
+      "Stay ahead of the competition with our cutting-edge technologies and future-proof solutions. As software engineers and web developers, we continuously keep ourselves updated with the latest industry trends and tools.",
     icon: "bx:bxs-window-alt",
   },
   {
-    title: "On-Demand Components",
+    title: "Agile Development, Timely Delivery",
     description:
-      "Need some JS? Astro can automatically hydrate interactive components when they become visible on the page.  ",
-    icon: "bx:bxs-data",
-  },
-  {
-    title: "Broad Integration",
-    description:
-      "Astro supports TypeScript, Scoped CSS, CSS Modules, Sass, Tailwind, Markdown, MDX, and any other npm packages.",
-    icon: "bx:bxs-bot",
-  },
-  {
-    title: "SEO Enabled",
-    description:
-      "Automatic sitemaps, RSS feeds, pagination and collections take the pain out of SEO and syndication. It just works!",
-    icon: "bx:bxs-file-find",
-  },
-  {
-    title: "Community",
-    description:
-      "Astro is an open source project powered by hundreds of contributors making thousands of individual contributions.",
-    icon: "bx:bxs-user",
-  },
+      "Time is of the essence, and we understand that. Our agile development approach ensures that we deliver your projects on time, without compromising on quality.",
+    icon: "bx:bxs-fast-forward-circle",
+  }
 ];
 ---
 
 <div class="mt-16 md:mt-0">
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
-    Everything you need to start a website
+    Let's bring your vision to life
   </h2>
   <p class="text-lg mt-4 text-slate-600">
-    Astro comes batteries included. It takes the best parts of state-of-the-art
-    tools and adds its own innovations.
+    Contact us today to explore how we can elevate your digital presence and drive your business forward with innovative solutions that make a difference.
   </p>
 </div>
 
