--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,16 +1,16 @@
 ---
 // @ts-ignore
 import { Icon } from "astro-icon";
+import Preact from "./ui/icons/preact.astro";
+import Vite from "./ui/icons/vite.astro";
 ---
 
 <div class="mt-24">
-  <h2 class="text-center text-slate-500">Works with your technologies</h2>
+  <h2 class="text-center text-slate-500">Trusted Technology Experience</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
     <Icon class="h-8 md:h-12" name="simple-icons:react" />
-    <Icon class="h-8 md:h-12" name="simple-icons:svelte" />
-    <Icon class="h-8 md:h-14" name="simple-icons:tailwindcss" />
-    <Icon class="h-8 md:h-16" name="simple-icons:alpinedotjs" />
-    <Icon class="h-8 md:h-12" name="simple-icons:vercel" />
-    <Icon class="h-8 md:h-12" name="simple-icons:astro" />
+    <Vite class="h-8 md:h-12" />
+    <Icon class="h-8 md:h-12" name="simple-icons:rust" />
+    <Icon class="h-8 md:h-12" name="simple-icons:nodejs" />
   </div>
 </div>
