--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar/navbar.astro";
 import "@fontsource-variable/inter/index.css";
+import { ViewTransitions } from 'astro:transitions';
 
 export interface Props {
   title: string;
@@ -19,7 +20,7 @@ const { title } = Astro.props;
 
 const makeTitle = title
   ? title + " | " + "Oceanus Group"
-  : "Oceanus Group - Marketing Website";
+  : "Oceanus Group";
 ---
 
 <!DOCTYPE html>
@@ -29,7 +30,7 @@ const makeTitle = title
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-
+    <ViewTransitions />
     <SEO
       title={makeTitle}
       description="Oceanus Group Marketing Website"
@@ -49,7 +50,7 @@ const makeTitle = title
   </head>
   <body>
     <Navbar />
-    <slot />
+    <slot transition:animate="slide"/>
     <Footer />
     <style is:global>
       /* Improve Page speed */
