Using daisy UI now, added post on Rust file encryption

--- a/src/components/features.astro
+++ b/src/components/features.astro
@@ -28,7 +28,7 @@ const features = [
   <h2 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">
     Let's bring your vision to life
   </h2>
-  <p class="text-lg mt-4 text-slate-600">
+  <p class="text-lg mt-4">
     Contact us today to explore how we can elevate your digital presence and drive your business forward with innovative solutions that make a difference.
   </p>
 </div>
@@ -42,7 +42,7 @@ const features = [
         </div>
         <div>
           <h3 class="font-semibold text-lg">{item.title}</h3>{" "}
-          <p class="text-slate-500 mt-2 leading-relaxed">{item.description}</p>
+          <p class="mt-2 leading-relaxed">{item.description}</p>
         </div>
       </div>
     ))
