--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,12 +1,10 @@
 ---
-// @ts-ignore
 import { Icon } from "astro-icon";
-import Preact from "./ui/icons/preact.astro";
 import Vite from "./ui/icons/vite.astro";
 ---
 
 <div class="mt-24">
-  <h2 class="text-center text-slate-500">Trusted Technology Experience</h2>
+  <h2 class="text-center">Trusted Technology Experience</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
     <Icon class="h-8 md:h-12" name="simple-icons:react" />
     <Vite class="h-8 md:h-12" />
