--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -11,6 +11,6 @@ import Link from "./ui/link.astro";
     Experience the power of bespoke software engineering and web development
   </p>
   <div class="flex mt-5">
-    <Link href="/contact" style="inverted">Let's Work Together</Link>
+    <a href="/contact" class="btn btn-primary">Let's Work Together</a>
   </div>
 </div>
