--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Picture } from "@astrojs/image/components";
-import Link from "@components/ui/link.astro";
 import { Icon } from "astro-icon";
+import Button from "./ui/button.astro";
 ---
 
 <main
@@ -22,29 +22,26 @@ import { Icon } from "astro-icon";
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
       Unleash Your Imagination
     </h1>
-    <p class="text-lg mt-4 text-slate-600 max-w-xl">
+    <p class="text-lg mt-4 max-w-xl">
       Collaborate with a team that shares your passion for pushing the boundaries of what's possible.
     </p>
     <div class="mt-6 flex flex-col sm:flex-row gap-3">
-      <Link
-        href="contact"
+      <a
+        href="/contact"
         target="_blank"
-        class="flex gap-1 items-center justify-center"
+        class="btn btn-primary flex gap-1 items-center justify-center"
         rel="noopener">
         <Icon class="text-white w-5 h-5" name="bx:bxs-right-arrow-alt" />
-
         Get in Touch
-      </Link>
-      <Link
-        size="lg"
-        style="outline"
+      </a>
+      <a
         rel="noopener"
         href="https://github.com/CM-IV/main-astro-site"
-        class="flex gap-1 items-center justify-center"
+        class="btn btn-outline flex gap-1 items-center justify-center"
         target="_blank">
         <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
         GitHub Repo
-      </Link>
+      </a>
     </div>
   </div>
 </main>
