--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,6 @@ const makeTitle = title
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="generator" content={Astro.generator} />
-    <ViewTransitions />
     <SEO
       title={makeTitle}
       description="Oceanus Group Marketing Website"
@@ -50,10 +49,24 @@ const makeTitle = title
         },
       }}
     />
+    <script is:inline>
+      // ☝️ This script prevent the FART effect.
+      if (localStorage.getItem("theme") === null) {
+        document.documentElement.setAttribute("data-theme", "winter");
+      } else
+        document.documentElement.setAttribute(
+          "data-theme",
+          localStorage.getItem("theme")
+        );
+      // "theme" LocalStorage value is set by the package to remember user preference.
+      // The value is checked and applyed before rendering anything.
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
   </head>
   <body>
     <Navbar />
-    <slot transition:animate="slide"/>
+    <slot/>
+    <br/>
     <Footer />
     <style is:global>
       /* Improve Page speed */
