--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -19,10 +19,10 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
     </Sectionhead>
 
     <div class="flex flex-col gap-3 mx-auto max-w-4xl mt-16">
-      <h2 class="font-bold text-3xl text-gray-800">
+      <h2 class="font-bold text-3xl">
         Expertise That Counts.
       </h2>
-      <p class="text-lg leading-relaxed text-slate-500">
+      <p class="text-lg leading-relaxed">
         Our team is a diverse group of talented individuals, each bringing a unique set of skills and experiences to the table. 
         As software engineers, developers, and creative minds, we're united by a common passion for problem-solving and turning complex challenges into elegant solutions.
       </p>
@@ -46,10 +46,10 @@ const publishedTeamMembers = await getCollection("team", ({ data }) => {
             </div>
 
             <div class="mt-4 text-center">
-              <h2 class="text-lg text-gray-800">
+              <h2 class="text-lg">
                 {teamMemberEntry.data.name}
               </h2>
-              <h3 class="text-sm text-slate-500">
+              <h3 class="text-sm">
                 {teamMemberEntry.data.title}
               </h3>
             </div>
