--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,7 +15,7 @@ import Contactform from "@components/contactform.astro";
 
     <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
       <div>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
+        <p class="text-lg leading-relaxed mt-3">
           Have something to say? We are here to help.
         </p>
       </div>
