--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -18,6 +18,10 @@ const menuitems = [
     title: "Contact",
     path: "/contact",
   },
+  {
+    title: "Feed",
+    path: "/rss.xml",
+  }
 ];
 ---
 <div class="antialiased">
