--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -35,13 +35,13 @@ const makeTitle = title
     <meta name="generator" content={Astro.generator} />
     <SEO
       title={makeTitle}
-      description="Oceanus Group Marketing Website"
+      description="Oceanus Group - innovation and success for your business."
       canonical={canonicalURL}
       openGraph={{
         basic: {
           url: canonicalURL,
           type: "website",
-          title: `Oceanus Group - Marketing Website`,
+          title: `Oceanus Group - innovation and success for your business.`,
           image: resolvedImageWithDomain,
         },
         image: {
