--- a/src/components/prices.astro
+++ b/src/components/prices.astro
@@ -1,6 +1,5 @@
 ---
 import { Tick } from "@components/ui/icons";
-import Link from "@components/ui/link.astro";
 
 const { plan } = Astro.props;
 ---
@@ -27,12 +26,12 @@ const { plan } = Astro.props;
         ))
       }
     </ul><div class="flex mt-8">
-      <Link
+      <a
+        class="btn"
         href={plan.button.link || "#"}
-        block
         style={plan.popular ? "primary" : "outline"}>
         {plan.button.text || "Get Started"}
-      </Link>
+      </a>
     </div>
   </div>
 </div>
