Using corporate theme, paginator buttons

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,7 +1,6 @@
 ---
 import { Picture } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
-import Button from "./ui/button.astro";
 ---
 
 <main
@@ -29,9 +28,9 @@ import Button from "./ui/button.astro";
       <a
         href="/contact"
         target="_blank"
-        class="btn btn-primary flex gap-1 items-center justify-center"
+        class="btn flex gap-1 items-center justify-center"
         rel="noopener">
-        <Icon class="text-white w-5 h-5" name="bx:bxs-right-arrow-alt" />
+        <Icon class="w-5 h-5" name="bx:bxs-right-arrow-alt" />
         Get in Touch
       </a>
       <a
