--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const makeTitle = title
     <script is:inline>
       // ☝️ This script prevent the FART effect.
       if (localStorage.getItem("theme") === null) {
-        document.documentElement.setAttribute("data-theme", "winter");
+        document.documentElement.setAttribute("data-theme", "corporate");
       } else
         document.documentElement.setAttribute(
           "data-theme",
