--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -27,7 +27,7 @@ const menuitems = [
     <div class="flex-1 flex justify-between items-center">
       <a href="/" class="text-lg"
           ><span class="font-bold">Oceanus</span><span
-            class="text-slate-500">Group</span
+            class="text-slate-400 mix-blend-difference">Group</span
           >
       </a>
     </div>
@@ -38,7 +38,7 @@ const menuitems = [
     </label>
 
     <label for="menu-toggle" class="pointer-cursor md:hidden block">
-      <svg class="fill-current text-gray-900"
+      <svg class="fill-current"
         xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
       </svg>
