Adjusted cta button

--- a/src/components/cta.astro
+++ b/src/components/cta.astro
@@ -7,6 +7,6 @@
     Experience the power of bespoke software engineering and web development
   </p>
   <div class="flex mt-5">
-    <a href="/contact" class="btn">Let's Work Together</a>
+    <a href="/contact" class="btn btn-outline text-white">Let's Work Together</a>
   </div>
 </div>
