Fix github icon in hero

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -38,7 +38,7 @@ import { Icon } from "astro-icon";
         href="https://github.com/CM-IV/main-astro-site"
         class="btn btn-outline flex gap-1 items-center justify-center"
         target="_blank">
-        <Icon class="text-black w-4 h-4" name="bx:bxl-github" />
+        <Icon class="w-4 h-4" name="bx:bxl-github" />
         GitHub Repo
       </a>
     </div>
