--- a/src/components/logos.astro
+++ b/src/components/logos.astro
@@ -1,13 +1,13 @@
 ---
 import { Icon } from "astro-icon";
-import Vite from "./ui/icons/vite.astro";
+import { Vite } from "./ui/icons";
 ---
 
 <div class="mt-24">
   <h2 class="text-center">Trusted Technology Experience</h2>
   <div class="flex gap-8 md:gap-20 items-center justify-center mt-10 flex-wrap">
     <Icon class="h-8 md:h-12" name="simple-icons:react" />
-    <Vite class="h-8 md:h-12" />
+    <Vite class="h-8 md:h-12 fill-current" />
     <Icon class="h-8 md:h-12" name="simple-icons:rust" />
     <Icon class="h-8 md:h-12" name="simple-icons:nodejs" />
   </div>
