--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,7 @@ import { SEO } from "astro-seo";
 import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar.astro";
 import "@fontsource-variable/inter/index.css";
+import { ViewTransitions } from 'astro:transitions';
 
 export interface Props {
   title: string;
@@ -61,6 +62,7 @@ const makeTitle = title
       // The value is checked and applyed before rendering anything.
     </script>
     <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
+    <ViewTransitions />
   </head>
   <body>
     <Navbar />
