--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -53,20 +53,21 @@ const { page } = Astro.props;
                     class="w-full rounded-md"
                   />
                   <div>
-                    <span class="text-blue-400 uppercase tracking-wider text-sm font-medium">
+                    <span transition:animate="slide" class="text-blue-400 uppercase tracking-wider text-sm font-medium">
                       {blogPostEntry.data.category}
                     </span>
 
-                    <h2 class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
+                    <h2 transition:name={`title-${blogPostEntry.slug}`} class="text-3xl font-semibold leading-snug tracking-tight mt-1 ">
                       {blogPostEntry.data.title}
                     </h2>
 
                     <div class="flex gap-2 mt-3">
-                      <span class="text-gray-400">
+                      <span transition:animate="slide" class="text-gray-400">
                         {blogPostEntry.data.author}
                       </span>
                       <span class="text-gray-400">• </span>
                       <time
+                        transition:animate="slide"
                         class="text-gray-400"
                         datetime={blogPostEntry.data.publishDate.toISOString()}>
                         {blogPostEntry.data.publishDate.toDateString()}
