--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -38,7 +38,7 @@ const menuitems = [
       <svg class="swap-off fill-current w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z"/></svg>
     </label> -->
 
-    <label for="menu-toggle" class="pointer-cursor md:hidden block">
+    <label for="menu-toggle" class="pointer-cursor lg:hidden block">
       <svg class="fill-current"
         xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
         <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
@@ -46,9 +46,9 @@ const menuitems = [
     </label>
     <input class="hidden" type="checkbox" id="menu-toggle" />
 
-    <div class="hidden md:flex md:items-center md:w-auto w-full" id="menu">
+    <div class="hidden lg:flex lg:items-center lg:w-auto w-full" id="menu">
       <nav>
-        <ul class="md:flex items-center justify-between text-base pt-4 md:pt-0">
+        <ul class="lg:flex items-center justify-between text-base pt-4 lg:pt-0">
           {
             menuitems.map((item) => (
             <li>
