--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,19 +1,15 @@
 ---
-import { Picture } from "@astrojs/image/components";
 import { Icon } from "astro-icon";
 ---
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <Picture
-      src={"https://ik.imagekit.io/xbkhabiqcy9/img/oskar-yildiz-cOkpTiJMGzA-unsplash_iNLe4XuI4.jpg?updatedAt=1669480510560"}
+    <img
+      srcset={"https://ik.imagekit.io/xbkhabiqcy9/img/oskar-yildiz-cOkpTiJMGzA-unsplash_iNLe4XuI4.jpg?updatedAt=1669480510560"}
       alt="hero image"
-      widths={[200, 400, 600]}
-      aspectRatio="4:3"
       sizes="(max-width: 800px) 100vw, 620px"
       loading="eager"
-      format="avif"
     />
   </div>
   <div>
