--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -1,15 +1,16 @@
 ---
 import { Icon } from "astro-icon";
+import { Image } from "astro:assets";
 ---
 
 <main
   class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
   <div class="py-6 md:order-1 hidden md:block">
-    <img
-      srcset={"https://ik.imagekit.io/xbkhabiqcy9/img/oskar-yildiz-cOkpTiJMGzA-unsplash_iNLe4XuI4.jpg?updatedAt=1669480510560"}
+    <Image
+      src="https://ik.imagekit.io/xbkhabiqcy9/img/oskar-yildiz-cOkpTiJMGzA-unsplash_iNLe4XuI4.jpg?updatedAt=1669480510560"
       alt="hero image"
-      sizes="(max-width: 800px) 100vw, 620px"
-      loading="eager"
+      width={600}
+      height={400}
     />
   </div>
   <div>
