--- a/src/pages/blog/[...page].astro
+++ b/src/pages/blog/[...page].astro
@@ -4,6 +4,7 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Paginator from "@components/paginator.astro";
+import { Image } from "astro:assets";
 
 
 export async function getStaticPaths({ paginate }: any) {
@@ -34,16 +35,15 @@ const { page } = Astro.props;
     <main class="mt-16">
       <ul class="grid gap-16 max-w-4xl mx-auto">
         {
-          page.data.map((blogPostEntry, index) => (
+          page.data.map((blogPostEntry, _index) => (
             <li>
               <a href={`/blog/${blogPostEntry.slug}`}>
                 <div class="grid md:grid-cols-2 gap-5 md:gap-10 items-center">
-                  <img
+                  <Image
                     src={blogPostEntry.data.image.src}
                     alt={blogPostEntry.data.image.alt}
-                    sizes="(max-width: 800px) 100vw, 800px"
-                    loading={index <= 2 ? "eager" : "lazy"}
-                    decoding={index <= 2 ? "sync" : "async"}
+                    width={800}
+                    height={800}
                     class="w-full rounded-md"
                   />
                   <div>
