--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -9,13 +9,13 @@ export interface Props {
 	image?: string;
 }
 
-const { title, description, image = '/social_img.png' } = Astro.props;
+const { title, description, image = '/odc2.png' } = Astro.props;
 ---
 
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
