--- a/src/components/cv/TimeLine.astro
+++ b/src/components/cv/TimeLine.astro
@@ -1,5 +1,5 @@
 ---
-const { title, subtitle } = Astro.props;
+const { title, subtitle1, subtitle2 } = Astro.props;
 ---
 
 <div class="flex">
@@ -9,7 +9,9 @@ const { title, subtitle } = Astro.props;
   </div>
   <div class="experience__data bd-grid px-5">
     <h3 class="font-semibold mb-1">{title}</h3>
-    <span class="font-light text-sm">{subtitle}</span>
+    <span class="font-light text-sm">{subtitle1}</span>
+    <br>
+    <span class="font-light text-sm">{subtitle2}</span>
     <p class="my-2 text-justify">
       <slot />
     </p>
