--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -31,7 +31,9 @@ import { Image } from "astro:assets";
       <h1 class="title my-2 text-4xl font-bold">{title}</h1>
       {pubDate && <time>{displayDate}</time>}
       <br />
-      {badge && <div class="badge badge-secondary my-1">{badge}</div>}
+      {badge?.map((tag) => (
+        badge.length > 0 && <div class="badge badge-secondary my-1">{tag}</div>
+      ))}
       {
         updatedDate && (
           <div>
