Moved images to local src/img folder, using gif for greet on index page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -10,7 +10,7 @@
       </label>
     </div>
     <div class="navbar-center">
-      <a class="btn btn-ghost normal-case text-xl" href="/">Chuck ⚡️</a>
+      <a class="btn btn-ghost normal-case text-xl" href="/">Oceanus Group ⚡️</a>
     </div>
     <div class="navbar-end"></div>
   </div>
