Fix donate image

--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import localGif from "../img/donate.gif"
+import localGif from "../img/donate.gif";
 ---
 
 <BaseLayout title = "Projects" sideBarActiveItemID="projects">
