Changed cta, favicon

--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -16,7 +16,7 @@ import { Image } from "astro:assets";
   <div>
     <h1
       class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
-      Unleash Your Imagination
+      Crafting Digital Experiences that Inspire
     </h1>
     <p class="text-lg mt-4 max-w-xl">
       Collaborate with a team that shares your passion for pushing the boundaries of what's possible.
