Changed pagination feature for blog

--- a/src/components/paginator.astro
+++ b/src/components/paginator.astro
@@ -4,40 +4,48 @@ const { page } = Astro.props;
 
 <div class="flex gap-x-4 pt-6 pl-6">
     {page.url.prev ? (
-        <!-- Previous Button -->
-        <button type="button" class="btn">
-            <a href={page.url.prev}>
-                Newer Posts
-            </a>
-        </button>
+        <a href={page.url.prev} class="btn btn-ghost my-10 mx-5">
+          {" "}
+          <svg
+            class="h-6 w-6 fill-current md:h-8 md:w-8"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+          >
+            <path d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z" />
+          </svg>{" "}
+          Recent posts
+        </a>
     ) : (
-        <!-- Previous Button -->
-        <button type="button" class="btn not-allowed opacity-25">
-            <a href={page.url.prev}>
-                Newer Posts
-            </a>    
-        </button>
+        // <button type="button" class="btn not-allowed opacity-25">
+        //     <a href={page.url.prev}>
+        //         Newer Posts
+        //     </a>    
+        // </button>
+        <div />
     )}
   
     {page.url.next ? (
-        <!-- Next Button -->
-        <button type="button" class="btn">
-            <a href={page.url.next}>
-                Older Posts
-            </a>    
-        </button>
+        <a href={page.url.next} class="btn btn-ghost my-10 mx-5">
+          Older Posts{" "}
+          <svg
+            class="h-6 w-6 fill-current md:h-8 md:w-8"
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+          >
+            {" "}
+            <path d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z" />
+          </svg>
+        </a>
     ) : (
-        <!-- Previous Button -->
-        <button type="button" class="btn not-allowed opacity-25">
-            <a href={page.url.next}>
-                Older Posts
-            </a>
-        </button>
+        // <button type="button" class="btn not-allowed opacity-25">
+        //     <a href={page.url.next}>
+        //         Older Posts
+        //     </a>
+        // </button>
+        <div />
     )}
 </div>
-
-<style>
-    .not-allowed {
-        pointer-events: none;
-    }
-</style>
