Changed about me page to be CV

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import Footer from "@components/footer.astro";
 import Navbar from "@components/navbar.astro";
 import "@fontsource-variable/inter/index.css";
 import { ViewTransitions } from 'astro:transitions';
+import '../styles/global.css';
 
 export interface Props {
   title: string;
